assets/sass/panels/_contact.scss
#first-contact-instructions li p {
    margin: 0;
}

#booking-inquiry-form {
    blockquote {
        padding: .5em .5em 0 .25em;
    }

    .form-label {
      display: inline;
      width: auto;
    }

    textarea.form-input {
        width: 100%;
    }
}

.contact-links-list {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;

    li {
        flex: 1;
        text-align: center;
        margin: 0 .5em;
    }

    a {
      width: 100%;
      word-break: break-word;
    }
}

.dos-and-donts-DO,
.dos-and-donts-DONT {
    display: inline;
}
.dos-and-donts-DO::after {
    content: " do ";
    text-transform: uppercase;
}
.dos-and-donts-DONT::after {
    content: " don't ";
    text-transform: uppercase;
}

#google-calendar-appointment-booking-form {
    display: none;
    padding-right: 10px;

    &:target {
        display: block;
    }
}

